--- a/build.xml
+++ b/build.xml
@@ -386,6 +386,8 @@
         <include name="jug-asl-2.0.0.jar" />
         <include name="commons-httpclient-3.0.1.jar" />
         <include name="groovy-all-1.0.jar" />
+        <include name="xstream-1.2.1.jar" />
+        <include name="xpp3_min-1.1.3.4.O.jar" />
 
         <!-- replacement j2ee compile required for instantj 
              since our installer doesn't install tools.jar -->
@@ -803,6 +805,8 @@
         <include name="mx4j/*.jar"/>
         <!-- for live data translation -->
         <include name="json.jar"/>
+        <include name="xstream-1.2.1.jar"/>
+        <include name="xpp3_min-1.1.3.4.O.jar"/>
       </fileset>
     </copy>
 
@@ -1210,7 +1214,10 @@
         <include name="jdom_b8.jar" />
         <include name="jsch-0.1.23.jar"/>
         <include name="getopt.jar"/>
+        <!-- For live data translation -->
         <include name="json.jar"/>
+        <include name="xstream-1.2.1.jar"/>
+        <include name="xpp3_min-1.1.3.4.O.jar"/>
       </fileset>
 
       <fileset dir="${sigar.lib}" includes="*.*" />
