--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -1979,6 +1979,10 @@ alert.config.props.CB.CanNotEditConditions=Editing the conditions for this type 
 alert.config.props.CB.LogCondition=Event/Log Level: {0}
 alert.config.props.CB.LogCondition.StringMatch=Event/Log Level({0}) and matching substring "{1}" 
 alert.config.props.CB.LogLevel=Event/Log Level
+alert.config.props.CB.ConfigCondition=Config Changed
+alert.config.props.CB.ConfigCondition.FileMatch=Config Changed: {0}
+alert.config.props.CB.Content.Match=and match substring (optional, 25 chars max):
+alert.config.props.CB.Content.FileMatch=Config changed and match file name (optional, 25 chars max):
 
 # MONITORING: EVENTS: ALERT NOTIFICATION
 alert.current.detail.notify.Tab=Notification Actions
