[HHQ-799] Provide a way to get back to the platform's auto-inventory report

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -1543,7 +1543,7 @@ resource.autodiscovery.currentStatus.NotStarted=Not Started
 resource.autodiscovery.currentStatus.InProgress=In Progress
 resource.autodiscovery.currentStatus.ScanCompleted=Scan Completed
 resource.autodiscovery.currentStatus.ScanInterrupted=Scan aborted. Perform another scan to discover resources.
-resource.autodiscovery.currentStatus.ViewResults=View Results
+resource.autodiscovery.currentStatus.ViewResults=View Last Scan Results
 resource.autodiscovery.currentStatus.ElapsedTime=Elapsed Time:
 resource.autodiscovery.currentStatus.DateStarted=Date Started:
 resource.autodiscovery.currentStatus.LastError=Last Error:
