[HHQ-802] Add xalan.jar to pdk/lib

--- a/build.xml
+++ b/build.xml
@@ -809,6 +809,8 @@
         <include name="dnsjava-2.0.3.jar"/>
         <!-- for JMX based plugins -->
         <include name="mx4j/*.jar"/>
+        <!-- for XPathAPI -->
+        <include name="xalan.jar"/>
         <!-- for live data translation -->
         <include name="json.jar"/>
         <include name="xstream-1.2.1.jar"/>
