adjustments for sigar-1.4 update: - enable /proc/net/tcp mirroring - replace NetServicesCollector.netstat with Sigar.getNetStat

--- a/etc/agent.properties
+++ b/etc/agent.properties
@@ -58,6 +58,9 @@ agent.tmpDir=./tmp
 # required to find jboss jars
 #jboss.installpath=/usr/local/jboss-4.0.0
 
+# mirror /proc/net/tcp on linux
+sigar.mirror.procnet=true
+
 ##
 ## Logging settings
 ##
