part of a previous bug hq-369

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -2090,6 +2090,7 @@ alert.config.error.noEmailAddressInput= : Please enter an email address
 alert.config.error.noMetaInput= : Please enter Sys log meta information
 alert.config.error.noProductInput= : Please enter Sys log product information
 alert.config.error.noVersionInput= : Please enter Sys log version information
+alert.config.error.noUserSelected= : Please select who to notify for this action
 alert.config.error.NoMetricSelected=You must select a metric for this condition.
 alert.config.error.NoCustomPropertySelected=You must select an inventory property for this condition.
 alert.config.error.NoControlActionSelected=You must select a control action for this condition.
