--- a/build.xml
+++ b/build.xml
@@ -830,6 +830,7 @@
        <fileset dir="${thirdparty.lib}/oracle_jdbc" includes="oracle12.jar" />
        <fileset dir="${thirdparty.lib}/mysql_jdbc" includes="mysql*.jar" />
        <fileset dir="${thirdparty.lib}/sybase_jdbc" includes="sybase*.jar" />
+       <fileset dir="${thirdparty.lib}/informix_jdbc" includes="ifxjdbc.jar" />
        <!-- Postgres plugin uses the 7.4.3 driver -->
        <fileset dir="${thirdparty.lib}/postgresql" includes="postgresql-7.4.3.jar"/>
        <fileset dir="${thirdparty.lib}/mssql_jdbc" includes="ms*.jar" />
@@ -907,6 +908,8 @@
     <hqplugin name="memcached"/>
 
     <hqplugin name="perlbal"/>
+
+    <hqplugin name="informix"/>
 
     <hqplugin name="mule"/>
 
