--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -2086,6 +2086,7 @@ events.alert.AlertNotificationActionTitle=Alert Notification Action
 alert.config.error.InvalidEmailAddress=The email addresses {0} has invalid syntax: {1}.
 alert.config.error.InvalidEmailAddresses=One or more of the email addresses entered had invalid syntax: {0}.
 alert.config.error.invalidEmailAddressInput= : One or more of the email addresses entered has illegal characters such as: [()<>;:\/"
+alert.config.error.invalidEmailAddressFormat= : One or more of the email addresses entered is incorrectly formatted. Please enter in the form: address@example.com
 alert.config.error.noEmailAddressInput= : Please enter an email address
 alert.config.error.noMetaInput= : Please enter Sys log meta information
 alert.config.error.noProductInput= : Please enter Sys log product information
