--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -1766,6 +1766,7 @@ alert.config.escalation.state.change=If the alert state has changed:
 alert.config.escalation.state.change.notify.previous=Notify previously notified users of the change
 alert.config.escalation.state.change.notify.all=Notify entire escalation chain of the change
 alert.config.escalation.notify.who=Select who to notify...
+alert.config.escalation.notify.how=Select method to notify...
 alert.config.escalation.unset=Unset Escalation
 alert.config.error.escalation.name.required=Escalation scheme name is required
 alert.config.error.escalation.name.dup=An escalation scheme already exists with the escalation name.  Please correct this error and submit again.
@@ -2087,6 +2088,8 @@ alert.config.error.InvalidEmailAddress=The email addresses {0} has invalid synta
 alert.config.error.InvalidEmailAddresses=One or more of the email addresses entered had invalid syntax: {0}.
 alert.config.error.invalidEmailAddressInput= : One or more of the email addresses entered has illegal characters such as: [()<>;:\/"
 alert.config.error.invalidEmailAddressFormat= : One or more of the email addresses entered is incorrectly formatted. Please enter in the form: address@example.com
+alert.config.error.SelectEscMethod= : Please select a notification method for this escalation action
+alert.config.error.SelectWhoMethod= : Please select who to notify for this escalation action
 alert.config.error.noEmailAddressInput= : Please enter an email address
 alert.config.error.noMetaInput= : Please enter Sys log meta information
 alert.config.error.noProductInput= : Please enter Sys log product information
