--- a/build.xml
+++ b/build.xml
@@ -443,15 +443,14 @@
   </target>
 
   <target name="hqu-deploy" depends="init">
-  	<!-- Just a quick way to copy rendit_sys into JBoss -->
     <copy todir="${jboss.home}/server/default/deploy/hq.ear/rendit_sys">
        <fileset dir="${rendit_sys.dir}"/>
     </copy>
     <mkdir dir="${jboss.home}/server/default/deploy/hq.ear/hq.war/hqu"/>
     <copy todir="${jboss.home}/server/default/deploy/hq.ear/hq.war/hqu">
        <fileset dir="${basedir}/ui_plugins">
-         <exclude name="rendit_sys"/>
-         <exclude name="old"/>
+         <exclude name="rendit_sys/**"/>
+         <exclude name="old/**"/>
        </fileset>
     </copy>
   </target>
