--- a/build.xml
+++ b/build.xml
@@ -281,6 +281,7 @@
     <mkdir dir="${ear.dir}/lib" />
     <mkdir dir="${ear.dir}/sigar_bin/lib" />
     <mkdir dir="${server.plugin.dir}" />
+    <mkdir dir="${ear.dir}/hq.war/hqu"/>
 
     <mkdir dir="${ear.dir}/hq-session.jar/META-INF" />
     <mkdir dir="${ear.dir}/hq-agent-session.jar/META-INF" />
