fix for HHQ-562, HHQ-562

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -2090,6 +2090,7 @@ alert.config.error.invalidEmailAddressInput= : One or more of the email addresse
 alert.config.error.invalidEmailAddressFormat= : One or more of the email addresses entered is incorrectly formatted. Please enter in the form: address@example.com
 alert.config.error.SelectEscMethod= : Please select a notification method for this escalation action
 alert.config.error.SelectWhoMethod= : Please select who to notify for this escalation action
+alert.config.error.250Char= : Description can only contain 250 characters
 alert.config.error.noEmailAddressInput= : Please enter an email address
 alert.config.error.noMetaInput= : Please enter Sys log meta information
 alert.config.error.noProductInput= : Please enter Sys log product information
