fix HQ-674 and added a key for localization of title element in the Escalation List

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -580,6 +580,7 @@ admin.config.confirm.saveSettings=The configuration settings were successfully s
 admin.config.message.to.create=Note: To create a new escalation scheme for this alert definition, please go to the <a href="{0}">Administration</a> section.
 admin.config.message.noEscalations=There are no escalation schemes
 admin.config.error.escalation.CannotDelete=Escalation cannot be deleted because it is currently in use
+admin.config.message.ClickEscNameEdit=Click scheme name to edit
 
 # Dashboard Titles
 dash.home.PageTitle=Dashboard
