Use new-style paths for rendit.  Now able to also fetch regular files at the expense of an uglier URL for regular requests.. :-(

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -44,7 +44,7 @@
 
   <filter-mapping>
     <filter-name>Authentication-Filter</filter-name>
-    <url-pattern>/hqu/*</url-pattern>
+    <url-pattern>*.hqu</url-pattern>
   </filter-mapping>
   <filter-mapping>
     <filter-name>Authentication-Filter</filter-name>
@@ -170,7 +170,7 @@
 
   <servlet-mapping>
     <servlet-name>hqu</servlet-name>
-    <url-pattern>/hqu/*</url-pattern>
+    <url-pattern>*.hqu</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>metricdata</servlet-name>
