--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -2107,6 +2107,7 @@ resource.common.monitor.alert.config.error.NoMetricsConfigured=No metrics are be
 resource.common.monitor.alert.config.error.NoMetricsEnabled=All of the metrics on this resource are disabled.  You can create an alert definition, but it will not be active until you enable the metrics used in the alert definition.
 resource.common.monitor.alert.config.error.SomeMetricsDisabled=One more more of the metrics configured for this alert definition are not enabled.  The alert definition has been created anyway.
 resource.common.monitor.alert.config.confirm.Create=Your Alert Definition has been created.
+resource.common.monitor.global.alert.config.confirm.Create=Alert definitions are being created for resources based on this new Resource Type Alert Definition, please do not immediate modify its properties.
 
 errors.dontmatch={0} does not match {1}
 
