--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -1942,7 +1942,7 @@ alert.config.props.CB.EnableTimePeriod=When conditions are met for {2} {3} withi
 alert.config.props.CB.EnableNumTimesInPeriod=Once every {2} times conditions are met within a time period of {0} {1}.
 alert.config.props.CB.Another=Add Another Condition
 alert.config.props.CB.Delete=Delete This Condition
-alert.config.props.CB.Content.UntilReenabled=Generate one alert and then disable alert definition
+alert.config.props.CB.Content.UntilReenabled=Generate one alert and then disable alert definition until fixed
 alert.config.props.CB.Content.Filter=Filter notification actions that are defined for related alerts.
 alert.config.props.CB.ActualValue=Actual Value:
 alert.config.props.CB.NoActualValue=Not Available
@@ -2107,7 +2107,6 @@ resource.common.monitor.alert.config.error.NoMetricsConfigured=No metrics are be
 resource.common.monitor.alert.config.error.NoMetricsEnabled=All of the metrics on this resource are disabled.  You can create an alert definition, but it will not be active until you enable the metrics used in the alert definition.
 resource.common.monitor.alert.config.error.SomeMetricsDisabled=One more more of the metrics configured for this alert definition are not enabled.  The alert definition has been created anyway.
 resource.common.monitor.alert.config.confirm.Create=Your Alert Definition has been created.
-resource.common.monitor.global.alert.config.confirm.Create=Alert definitions are being created for resources based on this new Resource Type Alert Definition, please do not immediate modify its properties.
 
 errors.dontmatch={0} does not match {1}
 
