[HHQ-815] Improve performance by making OOB configurable so that users can turn it off

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -510,6 +510,7 @@ admin.settings.BaselineConfigTab=Automatic Baseline Configuration Properties
 admin.settings.BaselineFrequencyLabel=Baseline Frequency:
 admin.settings.BaselineDataSet=Baseline Dataset:
 admin.settings.BaselineMinSet=Baseline Minimum Data Points:
+admin.settings.OOBEnabled=Track Out-of-Bounds Metrics:
 
 admin.settings.RtDataPurge=Delete Response Time Data Older Than:
 admin.settings.AlertPurge=Delete Alerts Older Than:
