--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -582,6 +582,8 @@ admin.config.message.to.create=Note: To create a new escalation scheme for this 
 admin.config.message.noEscalations=There are no escalation schemes
 admin.config.error.escalation.CannotDelete=Escalation cannot be deleted because it is currently in use
 admin.config.message.ClickEscNameEdit=Click scheme name to edit
+admin.config.message.IncorrectSNMPIPFormat=Please enter a valid IP address in the form of xxx.xxx.xxx.xxx/port
+admin.config.message.IncorrectSNMPTrapOIDFormat=Please enter a Trap OID for the SNMP Trap in the format 1.2.3.4
 
 # Dashboard Titles
 dash.home.PageTitle=Dashboard
@@ -2670,3 +2672,5 @@ inform.config.admin.HQServerConfig= - Change settings for email, announcements, 
 inform.config.admin.MonitoringDefaults= - Define monitoring policies for the entire environment
 inform.config.admin.PolicyDefaults= - Define monitoring and alerting policies for the entire environment
 inform.config.admin.EscalationScheme= - Define global escalation schemes that can be applied to individual alerts
+inform.config.escalation.scheme.OID=(ex: 1.2.3.4)
+inform.config.escalation.scheme.IPAddress=(ex: xxx.xxx.xxx.xxx/port)
