--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -581,6 +581,7 @@ admin.config.confirm.saveSettings=The configuration settings were successfully s
 admin.config.message.to.create=Note: To create a new escalation scheme for this alert definition, please go to the <a href="{0}">Administration</a> section.
 admin.config.message.noEscalations=There are no escalation schemes
 admin.config.error.escalation.CannotDelete=Escalation cannot be deleted because it is currently in use
+admin.config.message.ClickEscNameEdit=Click scheme name to edit
 admin.config.message.IncorrectSNMPIPFormat=Please enter a valid IP address in the form of xxx.xxx.xxx.xxx/port
 admin.config.message.IncorrectSNMPTrapOIDFormat=Please enter a Trap OID for the SNMP Trap in the format 1.2.3.4
 
@@ -1769,6 +1770,7 @@ alert.config.escalation.state.change=If the alert state has changed:
 alert.config.escalation.state.change.notify.previous=Notify previously notified users of the change
 alert.config.escalation.state.change.notify.all=Notify entire escalation chain of the change
 alert.config.escalation.notify.who=Select who to notify...
+alert.config.escalation.notify.how=Select method to notify...
 alert.config.escalation.unset=Unset Escalation
 alert.config.error.escalation.name.required=Escalation scheme name is required
 alert.config.error.escalation.name.dup=An escalation scheme already exists with the escalation name.  Please correct this error and submit again.
@@ -2090,6 +2092,9 @@ alert.config.error.InvalidEmailAddress=The email addresses {0} has invalid synta
 alert.config.error.InvalidEmailAddresses=One or more of the email addresses entered had invalid syntax: {0}.
 alert.config.error.invalidEmailAddressInput= : One or more of the email addresses entered has illegal characters such as: [()<>;:\/"
 alert.config.error.invalidEmailAddressFormat= : One or more of the email addresses entered is incorrectly formatted. Please enter in the form: address@example.com
+alert.config.error.SelectEscMethod= : Please select a notification method for this escalation action
+alert.config.error.SelectWhoMethod= : Please select who to notify for this escalation action
+alert.config.error.250Char= : Description can only contain 250 characters
 alert.config.error.noEmailAddressInput= : Please enter an email address
 alert.config.error.noMetaInput= : Please enter Sys log meta information
 alert.config.error.noProductInput= : Please enter Sys log product information
