--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -2654,6 +2654,7 @@ resource.common.monitor.label.events.Control=Control Actions
 
 resource.common.alert.action.acknowledge.label=ACKNOWLEDGE
 resource.common.alert.action.fixed.label=FIXED
+resource.common.alert.action.fix.header=Fix
 
 resource.common.alert.clickToFix=Click the "Fixed" button to mark alert condition as fixed
 resource.common.alert.beenFixed=This alert has been fixed
