Display last fix when viewing classic alerts

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -2658,6 +2658,7 @@ resource.common.alert.action.fix.header=Fix
 
 resource.common.alert.clickToFix=Click the "Fixed" button to mark alert condition as fixed
 resource.common.alert.beenFixed=This alert has been fixed
+resource.common.alert.previousFix=Previous Fix: 
 
 # Informational Text
 inform.config.escalation.scheme.newescalation.escalationexplanation=An escalation scheme allows you to order alert notifications and actions. It can be applied to one or more alert definitions.
