Hookup UI for alert center

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -61,6 +61,7 @@ common.label.Edit=Edit
 common.label.Save=Save
 common.label.Next=Next Step
 common.label.Cancel=Cancel
+common.label.Help=Help
 common.title.Edit=Edit {0}
 common.label.CreateNew=Create New
 common.label.AddAction=Create Action
@@ -89,6 +90,7 @@ exception.javax.ejb.CreateException=there was an error creating this object
 dashboard.template.title=HQ Dashboard
 user.admin.page.title=HQ Administration
 dash.home.removed.resource=removed resource
+attachment.title={0} (UI Attachment)
 
 #
 button.submit=SubmitPortal
