Display link back to resource from alert

--- a/web/WEB-INF/classes/ApplicationResources.properties
+++ b/web/WEB-INF/classes/ApplicationResources.properties
@@ -50,6 +50,7 @@ common.header.Members=Members
 common.header.Name=Name
 common.label.Description=Description:
 common.label.Name=Name:
+common.label.Resource=Resource:
 common.label.Password=Password:
 common.label.Colon=:
 common.label.Dash=-
