--- a/src/org/hyperic/hq/events/Resources.properties
+++ b/src/org/hyperic/hq/events/Resources.properties
@@ -5,6 +5,6 @@ alert.sortField.date=Date
 alert.sortField.def=Alert
 alert.sortField.resource=Resource
 alert.sortField.fixed=Fixed
-alert.sortField.ackedBy=Acknowledged By
+alert.sortField.ackedBy=Acked By
 alert.sortField.severity=Severity
 escalation.type.classic=Classic
